--- a/doanasp/doanasp/Views/Carts/CartUser.cshtml
+++ b/doanasp/doanasp/Views/Carts/CartUser.cshtml
@@ -1,47 +1,141 @@
 ﻿@model IEnumerable<doanasp.Models.Cart>
 @{
     Layout = "_LayoutMember";
+    string username = "anonymous";
+    int Id = 0;
+    if (ViewBag.UserName != null)
+    {
+        username = ViewBag.UserName;
+    }
+    if (ViewBag.id != null)
+    {
+        Id = ViewBag.id;
+
+    }
+
 }
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Product.SKU)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Product.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Quantity)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Product.Price)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
+@section id{@Id};
+@section name{@username};
+<div style="margin-left:10%;>
 
-        <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.SKU)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.Price)
-                </td>
+    <div class="column" style="width:50%">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
 
-            </tr>
-        }
-        </tbody>
-</table>
+                    </th>
+                    <th>
+                        Sản phẩm
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Product.SKU)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Product.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Quantity)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Product.Price)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            <input type="checkbox" id="@item.Product.Id" name="@item.Quantity" value="@item.Product.Price" />
+                        </td>
+                        <td>
+                            <img src="~/img/@item.Product.Image" alt="Computer Man" style="width:72px;height:72px;">
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Product.SKU)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Product.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Product.Price)
+                        </td>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+
+        <div class="flex-column" style="width:50%">
+            <div class="cart-total-prices">
+                <div class="cart-total-prices__inner">
+                    <div class="styles__StyledShippingAddress-sc-1sjj51k-0 juqUnC">
+                        <p class="heading">
+                            <span class="text">Giao tới</span>
+                            <span data-view-id="cart_shipping_location.change" class="link">Thay đổi</span>
+                        </p>
+                        <p class="title">
+                            <b class="name">Văn Tiến</b>
+                            <b class="phone">0327688127</b>
+                        </p>
+                        <p class="address">Đường 18, hẻm 7, nhà số 5, Xã Bến Củi, Huyện Dương Minh Châu, Tây Ninh</p>
+                    </div>
+                    <div class="styles__StyledWrapCoupons-sc-11gpuej-0 hOvmKB">
+                        <div class="styles__StyledCouponBox-sc-1ibe03g-0 jmylnB">
+                            <div class="title-usage">
+                                <p class="coupon-title">Tiki khuyến mãi</p>
+                                <p class="max-usage">
+                                    Có thể chọn 2
+                                    <img class="max-usage__info" src="https://frontend.tikicdn.com/_desktop-next/static/img/mycoupon/icons-info-gray.svg" alt="info">
+                                </p>
+                            </div>
+                            <div class="eligible_coupon_list" data-view-id="platform_coupon">
+                            </div>
+                            <div data-view-id="platform_coupon.cart_coupon_view.all" class="show-more">
+                                <img src="https://frontend.tikicdn.com/_desktop-next/static/img/mycoupon/coupon_icon.svg">
+                                <span>
+                                    Chọn hoặc nhập Khuyến mãi
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="styles__StyledCartPrices-sc-1op1gws-0 cdzcxd">
+                        <div class="prices">
+                            <ul class="prices__items">
+                                <li class="prices__item">
+                                    <span class="prices__text">Tạm tính</span>
+                                    <span class="prices__value">0đ</span>
+                                </li>
+                                <li class="prices__item">
+                                    <span class="prices__text">Giảm giá</span>
+                                    <span class="prices__value">0đ</span>
+                                </li>
+                            </ul>
+                            <div class="prices__total">
+                                <span class="prices__text">Tổng cộng</span>
+                                <div class="prices__content">
+                                    <div class="prices__value prices__value--empty">Vui lòng chọn sản phẩm</div>
+                                    <span class="prices__value--noted">(Đã bao gồm VAT nếu có)</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button data-view-id="cart_navigation_proceed" data-view-label="{&quot;shipping_salerules&quot;:[]}" type="button" class="cart__submit">Mua Hàng (0)</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 
 @section productTypeName {
     <select class="input-select" asp-items="ViewBag.ProductType">
