--- a/doanasp/doanasp/Views/Products/PD.cshtml
+++ b/doanasp/doanasp/Views/Products/PD.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     Layout = "_LayoutMember";
+    string username = "anonymous";
+    if (ViewBag.UserName != null)
+    {
+        username = ViewBag.UserName;
+    }
 }
+@section name{@username};
 <body>
     <!-- HEADER -->
     <!-- /HEADER -->
