--- a/doanasp/doanasp/Views/Products/Detail.cshtml
+++ b/doanasp/doanasp/Views/Products/Detail.cshtml
@@ -1,13 +1,29 @@
 ﻿@model doanasp.Models.Product
 @{
-    Layout = "_LayoutMember";
-    string username = "Khach";
+    Layout = "_LayoutMember"; ViewData["Title"] = "Home Page";
+    string username = "anonymous";
+    int Id = 0;
     if (ViewBag.UserName != null)
     {
         username = ViewBag.UserName;
+        Id = ViewBag.id;
+        @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>}
+    }
+    else
+    {
+        @section Member{}
+    }
+
+    if (ViewBag.id != null)
+    {
+        Id = ViewBag.id;
+
     }
 }
-@section name{@username};
+
+@section id{@Id}
+
+@section name{@username}
 <body>
     <!-- /NAVIGATION -->
     <!-- BREADCRUMB -->
@@ -334,31 +350,31 @@
                 </div>
 
                 <!-- product -->
-                    <div class="col-md-3 col-xs-6">
-                        <div class="product">
-                            <div class="product-img">
-                                <img src="~/img/product01.png" alt="">
-                                <div class="product-label">
-                                    <span class="sale">-30%</span>
-                                </div>
-                            </div>
-                            <div class="product-body">
-                                <p class="product-category">Category</p>
-                                <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                                <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                                <div class="product-rating">
-                                </div>
-                                <div class="product-btns">
-                                    <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-                                    <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-                                    <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-                                </div>
-                            </div>
-                            <div class="add-to-cart">
-                                <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                <div class="col-md-3 col-xs-6">
+                    <div class="product">
+                        <div class="product-img">
+                            <img src="~/img/product01.png" alt="">
+                            <div class="product-label">
+                                <span class="sale">-30%</span>
                             </div>
                         </div>
+                        <div class="product-body">
+                            <p class="product-category">Category</p>
+                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
+                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+                            <div class="product-rating">
+                            </div>
+                            <div class="product-btns">
+                                <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                                <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+                            </div>
+                        </div>
+                        <div class="add-to-cart">
+                            <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                        </div>
                     </div>
+                </div>
                 <!-- /product -->
                 <!-- product -->
                 <div class="col-md-3 col-xs-6">
