--- a/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
@@ -44,7 +44,7 @@
                 <ul class="header-links pull-right">
                     <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
                     <li><a asp-controller="Accounts" asp-action="Login"><i class="fa fa-user-o"></i>@RenderSection("name")</a></li>
-                    <li><a asp-controller="Accounts" asp-action="Logout" class="btn-danger">Logout</a></li>
+                   @RenderSection("Member")
                 </ul>
             </div>
         </div>
