--- a/doanasp/doanasp/Views/Accounts/Login.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Login.cshtml
@@ -28,7 +28,7 @@
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input asp-controller="Home" asp-action="Index" type="submit" value="Sign Up" class="btn btn-primary" />
+            <input type="submit" value="Sign Up" class="btn btn-primary" />
         </div>
     </form>
 </div>
