--- a/doanasp/doanasp/Views/Accounts/Login.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Login.cshtml
@@ -4,7 +4,7 @@
 <div class="container" id="container">
     <div class="form-container sign-up-container">
          <form method="post">
-             <h1>Create Account</h1>
+             <h1>Sign Up</h1>
              <input type="text" placeholder="Full name" asp-for="Fullname" />
              <input type="text" placeholder="Username" asp-for="Username" />
              <input type="password" placeholder="Password" asp-for="Password" />
