--- a/doanasp/doanasp/Views/Wishes/WishUser.cshtml
+++ b/doanasp/doanasp/Views/Wishes/WishUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<doanasp.Models.Cart>
+﻿@model IEnumerable<doanasp.Models.Wish>
 @{
     Layout = "_LayoutMember"; ViewData["Title"] = "Home Page";
     string username = "anonymous";
