--- a/doanasp/doanasp/Views/Products/PD.cshtml
+++ b/doanasp/doanasp/Views/Products/PD.cshtml
@@ -7,11 +7,11 @@
     {
         username = ViewBag.UserName;
         Id = ViewBag.id;
-        @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>}
+        @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>};
     }
     else
     {
-        @section Member{}
+        @section Member{};
     }
 
     if (ViewBag.id != null)
@@ -20,10 +20,11 @@
 
     }
 }
+@section idWish{@Id};
+@section id{@Id};
 
-@section id{@Id}
+@section name{@username};
 
-@section name{@username}
 <body>
     <!-- HEADER -->
     <!-- /HEADER -->
@@ -283,7 +284,7 @@
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><a asp-controller="Wishes" asp-action="WishUser" asp-route-id ="@item.Id"><span class="tooltipp">add to wishlist</span></a></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
                                         </div>
