--- a/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
@@ -80,10 +80,10 @@
                         <div class="header-ctn">
                             <!-- Wishlist -->
                             <div>
-                                <a href="#">
+                                <a asp-controller="Wishes" asp-action="WishUser" asp-route-id ="@RenderSection("id")">
                                     <i class="fa fa-heart-o"></i>
                                     <span>Your Wishlist</span>
-                                    <div class="qty">2</div>
+                                    @*<div class="qty">2</div>*@
                                 </a>
                             </div>
                             <!-- /Wishlist -->
