--- a/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
@@ -80,7 +80,7 @@
                         <div class="header-ctn">
                             <!-- Wishlist -->
                             <div>
-                                <a asp-controller="Wishes" asp-action="WishUser" asp-route-id ="@RenderSection("id")">
+                                <a asp-controller="Wishes" asp-action="WishUser" asp-route-id ="@RenderSection("idWish")">
                                     <i class="fa fa-heart-o"></i>
                                     <span>Your Wishlist</span>
                                     @*<div class="qty">2</div>*@
