--- a/doanasp/doanasp/Views/Carts/CartUser.cshtml
+++ b/doanasp/doanasp/Views/Carts/CartUser.cshtml
@@ -20,11 +20,10 @@
 
     }
 }
-@section idWish{@Id};
-@section id{@Id};
+@section idWish{@Id}
+@section id{@Id}
 
-@section name{@username};
-;>
+@section name{@username}
 
 <div class="column" style="width:50%">
     <table class="table">
@@ -83,12 +82,3 @@
         </tbody>
     </table>
 </div>
-
-</div>
-
-
-@section productTypeName {
-    <select class="input-select" asp-items="ViewBag.ProductType">
-    </select>
-
-}
