--- a/doanasp/doanasp/Views/Home/Index.cshtml
+++ b/doanasp/doanasp/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
 
     }
 }
-@section idWish{@Id};
-@section id{@Id};
+@section idWish{@Id}
+@section id{@Id}
 
-@section name{@username};
+@section name{@username}
 
 <nav id="navigation">
     <!-- container -->
@@ -435,8 +435,3 @@
 <!--</div>-->
 <!-- /container -->
 
-@section productTypeName {
-    <select class="input-select" asp-items="ViewBag.ProductType">
-    </select>
-
-}
