--- a/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutMember.cshtml
@@ -67,10 +67,9 @@
                     <!-- SEARCH BAR -->
                     <div class="col-md-6">
                         <div class="header-search">
-                            <form>
-                                    @RenderSection("productTypeName")
-                                <input class="input" placeholder="Search here">
-                                <button class="search-btn">Search</button>
+                            <form   method="get">
+                            <input  class="input" name="keyword" placeholder="Search here">
+                            <button asp-controller="Products" asp-action="Search"  class="search-btn">Search</button>
                             </form>
                         </div>
                     </div>
@@ -80,7 +79,7 @@
                         <div class="header-ctn">
                             <!-- Wishlist -->
                             <div>
-                                <a asp-controller="Wishes" asp-action="WishUser" asp-route-id ="@RenderSection("id")">
+                                <a asp-controller="Wishes" asp-action="WishUser" asp-route-id ="@RenderSection("idWish")">
                                     <i class="fa fa-heart-o"></i>
                                     <span>Your Wishlist</span>
                                     @*<div class="qty">2</div>*@
