--- a/doanasp/doanasp/Views/Carts/DeleteUser.cshtml
+++ b/doanasp/doanasp/Views/Carts/DeleteUser.cshtml
@@ -21,6 +21,7 @@
     }
 
 }
+@section idWish{@Id}
 @section id{@Id}
 @section name{@username}
 
@@ -30,7 +31,7 @@
 <div>
     <h4>Cart</h4>
     <hr />
-    <dl class="row">
+    <dl class="row" style=" margin-left: 5%">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Account.Fullname)
         </dt>
