--- a/doanasp/doanasp/Views/Accounts/Index.cshtml
+++ b/doanasp/doanasp/Views/Accounts/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    List<Invoice> invoices = ViewBag.Invoice;
 }
 
 <h1>Index</h1>
@@ -29,6 +30,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Fullname)
+            </th>
+            <th>
+                Price
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IsAdmin)
@@ -62,6 +66,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Fullname)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fullname)
+            </td>
+            <td>
+                @invoices.Where(i => i.Account.id == i.AccountId).Sum(i=>i.Total)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsAdmin)
