--- a/doanasp/doanasp/Views/Products/Index.cshtml
+++ b/doanasp/doanasp/Views/Products/Index.cshtml
@@ -75,7 +75,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <a asp-action="SellProduct" asp-route-id="@item.Id">DSBH</a>
             </td>
         </tr>
 }
