--- a/doanasp/doanasp/Views/Products/SearchProducts.cshtml
+++ b/doanasp/doanasp/Views/Products/SearchProducts.cshtml
@@ -284,7 +284,7 @@
                                             <i class="fa fa-star"></i>
                                         </div>
                                         <div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><a asp-controller="Wishes" asp-action="Add" asp-route-id="@item.Id"><span class="tooltipp">add to wishlist</span></a></button>
+                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><a asp-controller="Wishes" asp-action="WishUser" asp-route-id="@item.Id"><span class="tooltipp">add to wishlist</span></a></button>
                                             <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
                                             <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
                                         </div>
